--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "web": "expo start --web",
     "lint": "expo lint",
     "init-firebase": "node ./scripts/initialize-firebase-data.js",
+    "cleanup-firebase": "node ./scripts/cleanup-and-reinit.js",
     "deploy-data": "node ./scripts/deploy-data-structure.js",
     "firebase:emulators": "firebase emulators:start",
     "firebase:deploy": "firebase deploy",
@@ -18,6 +19,7 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^15.0.2",
+    "@react-native-async-storage/async-storage": "^1.24.0",
     "@react-navigation/bottom-tabs": "^7.4.0",
     "@react-navigation/elements": "^2.6.3",
     "@react-navigation/native": "^7.1.8",
@@ -43,13 +45,21 @@
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
     "react-native-web": "~0.21.0",
-    "react-native-worklets": "0.5.1"
+    "react-native-worklets": "0.5.1",
+    "react-redux": "^9.2.0",
+    "redux": "^4.2.1",
+    "redux-persist": "^6.0.0",
+    "redux-thunk": "^3.1.0",
+    "reselect": "^5.1.1"
   },
   "devDependencies": {
     "@types/react": "~19.1.0",
+    "@types/react-redux": "^7.1.34",
+    "@types/redux": "^3.6.31",
     "eslint": "^9.25.0",
     "eslint-config-expo": "~10.0.0",
     "firebase-tools": "^13.0.0",
+    "redux-logger": "^3.0.6",
     "typescript": "~5.9.2"
   },
   "private": true
